--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <script src="scripts/scripts.js" defer></script>
+    <title>Useless</title>
   </head>
-  <body></body>
+  <body>
+
+    <div class="form-container">
+      <form action="index.html">
+        <label for="addItem">Add Item</label>
+        <input type="text" />
+    </div>
+    </form>
+  </body>
 </html>
