--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <title>Useless</title>
   </head>
   <body>
+    <h1>The best To Do list on the internet</h1>
 
-    <div class="form-container">
-      <form action="index.html">
-        <label for="addItem">Add Item</label>
-        <input type="text" />
-    </div>
-    </form>
+    <main>
+      <div class="form-container">
+        <h3>To do list</h3>
+        <form action="index.html">
+          <label for="addItem">Add Item</label>
+          <input type="text" />
+          <ul class="list">
+
+          </ul>
+      </div>
+      </form>
+    </main>
   </body>
 </html>
