added form input & buttons

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           <ul class="list">
 
           </ul>
-      </div>
+          <button class="lucky"></button>
+        </div>
       </form>
+      <button class="clear">clear</button>
     </main>
   </body>
 </html>
