--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
     <script src="scripts/scripts.js" defer></script>
     <title>Useless</title>
   </head>
@@ -20,10 +21,12 @@
           <ul class="list">
 
           </ul>
-          <button class="lucky"></button>
         </div>
       </form>
-      <button class="clear">clear</button>
+      <div class="buttons">
+        <button class="lucky">Feeling lucky</button>
+        <button class="clear">clear</button>
+      </div>
     </main>
   </body>
 </html>
