--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
         <form action="index.html">
           <label for="addItem">Add Item</label>
           <input type="text" />
-          <ul class="list">
-
-          </ul>
-        </div>
-      </form>
+        </form>
+        <ul class="list"></ul>
+      </div>
       <div class="buttons">
         <button class="lucky">Feeling lucky</button>
         <button class="clear">clear</button>
